--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
+                                    <li><a class="dropdown-item" href="drones.html">SL Series Drones</a></li>
                                     <li><a class="dropdown-item" href="customsolutions.html">Custom Solutions</a></li>
                                 </ul>
                             </li>
@@ -167,15 +168,26 @@
                     </div>
                 </div>
 
+                <!-- Drones -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
+                        <i class="fas fa-robot fa-3x mb-3 text-info"></i>
+                        <h4 class="mb-2">Drones (SL Series)</h4>
+                        <p>Explore Slabbion's titanium drone army: SL-01 to SL-07—each built for purpose, precision, and power.</p>
+                        <a href="drones.html#sl-series" class="btn btn-outline-info mt-3">View Models</a>
+                    </div>
+                </div>
+
                 <!-- Custom Solutions -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-cogs fa-3x mb-3 text-warning"></i>
-                        <h4 class="mb-2">Custom Solutions</h4>
-                        <p>Need something outside the box? We design and build around your vision.</p>
-                        <a href="customsolutions.html#custom-solutions" class="btn btn-outline-warning mt-3">Explore</a>
+                        <i class="fas fa-brain fa-3x mb-3 text-warning"></i>
+                        <h4 class="mb-2">Custom AI & Agents</h4>
+                        <p>Beyond software—Slabbion crafts intelligent agents and tailored digital minds to serve unique missions.</p>
+                        <a href="customsolutions.html#ai-agents" class="btn btn-outline-warning mt-3">Explore</a>
                     </div>
                 </div>
+
 
                 <!-- Join Our Team -->
                 <div class="col-lg-3 col-md-6 mb-4">
