--- a/gamedevelopment.html
+++ b/gamedevelopment.html
@@ -104,6 +104,7 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
+                                    <li><a class="dropdown-item" href="drones.html">SL Series Drones</a></li>
                                     <li><a class="dropdown-item" href="customsolutions.html">Custom Solutions</a></li>
                                 </ul>
                             </li>
