--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,8 @@
         "addressRegion": "Gauteng",
         "addressCountry": "South Africa"
       },
-      "telephone": "+27 "
+      "telephone": "+27 ",
+        "email": "slabbion.tech@gmail.com"
     }
     </script>
 </head>
