--- a/drones.html
+++ b/drones.html
@@ -226,6 +226,81 @@
         </div>
     </section>
 
+        <!-- SL Series Drones with Modals -->
+    <section id="sl-series" class="container py-5">
+    <h2 class="text-center mb-5 section-title glow-blue">🚀 SL Series Titanium Drones</h2>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+            <!-- SL-01 Falcon -->
+            <div class="col">
+                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
+                    <div class="card-body p-4">
+                        <h4 class="mb-3 text-info">SL-01 “Falcon”</h4>
+                        <p>Autonomous Aerial Surveillance Unit designed for area sweeps, anomaly detection, and live-stream feeds. RTB & self-charging enabled.</p>
+                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalFalcon">Browse Images</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal Falcon -->
+            <div class="modal fade" id="modalFalcon" tabindex="-1" aria-labelledby="modalFalconLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalFalconLabel">SL-01 Falcon</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Drones/SL01_Falcon_1.jpg" alt="Falcon Image 1" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL01_Falcon_2.jpg" alt="Falcon Image 2" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL01_Falcon_3.jpg" alt="Falcon Image 3" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SL-02 Hunter -->
+            <div class="col">
+                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
+                    <div class="card-body p-4">
+                        <h4 class="mb-3 text-info">SL-02 “Hunter”</h4>
+                        <p>High-speed pursuit UAV using vision + GPS locking. Features pack-hunting AI and full autonomy with manual override support.</p>
+                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalHunter">Browse Images</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal Hunter -->
+            <div class="modal fade" id="modalHunter" tabindex="-1" aria-labelledby="modalHunterLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalHunterLabel">SL-02 Hunter</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Drones/SL02_Hunter_1.jpg" alt="Hunter Image 1" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL02_Hunter_2.jpg" alt="Hunter Image 2" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL02_Hunter_3.jpg" alt="Hunter Image 3" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Repeat the same structure for SL-03 Vulture, SL-04 Viper, SL-05 Raven, SL-07 Phantom Vortex -->
+            <!-- You can copy and adapt modal IDs, titles, and image file names accordingly -->
+
+        </div>
+    </section>
+
 
     <!-- IMAGE SCROLLER -->
     <section id="image-scroller">
@@ -365,6 +440,9 @@
             </div>
         </div>
     </section>
+    
+
+
 
     <!-- Drone AI Logs Section -->
     <section id="drone-logs" class="container py-5">
@@ -372,83 +450,83 @@
             <h2 class="text-center mb-5 section-title glow-blue">🧠 AI Core Logs</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
-            <!-- SL-01 Falcon Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Falcon sweep concluded. Two anomalies flagged. Uploading thermal overlay to central core."</p>
-                    <footer class="blockquote-footer text-light">SL-01 Falcon <cite class="text-muted">[04:05 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-info">🛰️ Status: Surveillance Complete</div>
+                <!-- SL-01 Falcon Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                        <div class="card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Falcon sweep concluded. Two anomalies flagged. Uploading thermal overlay to central core."</p>
+                            <footer class="blockquote-footer text-light">SL-01 Falcon <cite class="text-muted">[04:05 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-info">🛰️ Status: Surveillance Complete</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <!-- SL-02 Hunter Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Target locked. Velocity sync engaged. Intercept in 4... 3... 2... —contact."</p>
-                    <footer class="blockquote-footer text-light">SL-02 Hunter <cite class="text-muted">[03:41 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-primary">🎯 Status: Target Acquired</div>
+                <!-- SL-02 Hunter Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                        <div class="card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Target locked. Velocity sync engaged. Intercept in 4... 3... 2... —contact."</p>
+                            <footer class="blockquote-footer text-light">SL-02 Hunter <cite class="text-muted">[03:41 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-primary">🎯 Status: Target Acquired</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <!-- SL-03 Vulture Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"EMP charge deployed. All hostile electronics offline. Switching to RTB protocol."</p>
-                    <footer class="blockquote-footer text-light">SL-03 Vulture <cite class="text-muted">[02:19 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-warning">⚡ Status: EMP Discharge Logged</div>
+                <!-- SL-03 Vulture Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                        <div class="card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"EMP charge deployed. All hostile electronics offline. Switching to RTB protocol."</p>
+                            <footer class="blockquote-footer text-light">SL-03 Vulture <cite class="text-muted">[02:19 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-warning">⚡ Status: EMP Discharge Logged</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <!-- SL-04 Viper Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Sweep velocity at 98%. Flare deployed at Zone Theta. Returning to orbit."</p>
-                    <footer class="blockquote-footer text-light">SL-04 Viper <cite class="text-muted">[01:44 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-danger">🚀 Status: Rapid Recon Achieved</div>
+                <!-- SL-04 Viper Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                        <div class="card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Sweep velocity at 98%. Flare deployed at Zone Theta. Returning to orbit."</p>
+                            <footer class="blockquote-footer text-light">SL-04 Viper <cite class="text-muted">[01:44 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-danger">🚀 Status: Rapid Recon Achieved</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <!-- SL-05 Raven Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Interior scan complete. Beacon signal deployed. Awaiting next objective."</p>
-                    <footer class="blockquote-footer text-light">SL-05 Raven <cite class="text-muted">[06:02 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-secondary">🕵️ Status: Tactical Marking Executed</div>
+                <!-- SL-05 Raven Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                        <div class="card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Interior scan complete. Beacon signal deployed. Awaiting next objective."</p>
+                            <footer class="blockquote-footer text-light">SL-05 Raven <cite class="text-muted">[06:02 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-secondary">🕵️ Status: Tactical Marking Executed</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <!-- SL-07 Phantom Vortex Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Velocity breach confirmed. Gyro hold locked. AI telemetry packet sent to core lab."</p>
-                    <footer class="blockquote-footer text-light">SL-07 Phantom Vortex <cite class="text-muted">[05:57 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-light">💨 Status: Speed Trial Complete</div>
+                <!-- SL-07 Phantom Vortex Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                        <div class="card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Velocity breach confirmed. Gyro hold locked. AI telemetry packet sent to core lab."</p>
+                            <footer class="blockquote-footer text-light">SL-07 Phantom Vortex <cite class="text-muted">[05:57 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-light">💨 Status: Speed Trial Complete</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
             </div>
         </div>
