--- a/drones.html
+++ b/drones.html
@@ -150,83 +150,7 @@
     </section>
 
 
-    <!-- SL Series Drones -->
-    <section id="sl-series" class="container py-5">
-        <h2 class="text-center mb-5 section-title glow-blue">🚀 SL Series Titanium Drones</h2>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-
-            <!-- SL-01 Falcon -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
-                    <h4 class="mb-3 text-info">SL-01 “Falcon”</h4>
-                    <p>Autonomous Aerial Surveillance Unit designed for area sweeps, anomaly detection, and live-stream feeds. RTB & self-charging enabled.</p>
-                    <a href="#sl-01" class="btn btn-outline-info mt-3">Specs</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SL-02 Hunter -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
-                    <h4 class="mb-3 text-info">SL-02 “Hunter”</h4>
-                    <p>High-speed pursuit UAV using vision + GPS locking. Features pack-hunting AI and full autonomy with manual override support.</p>
-                    <a href="#sl-02" class="btn btn-outline-info mt-3">Specs</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SL-03 Vulture -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
-                    <h4 class="mb-3 text-info">SL-03 “Vulture”</h4>
-                    <p>EMP strike drone designed to disable electronics at close proximity. Target locks via signal, executes, and RTBs or self-neutralizes.</p>
-                    <a href="#sl-03" class="btn btn-outline-info mt-3">Specs</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SL-04 Viper -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
-                    <h4 class="mb-3 text-info">SL-04 “Viper”</h4>
-                    <p>High-speed tactical recon drone with predictive pathfinding, swarm or stealth ops, and deployable payloads like flares or tags.</p>
-                    <a href="#sl-04" class="btn btn-outline-info mt-3">Specs</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SL-05 Raven -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
-                    <h4 class="mb-3 text-info">SL-05 “Raven”</h4>
-                    <p>Agile quadcopter for recon and tactical scouting. Modular payloads, indoor/outdoor versatility, and real-time telemetry with FPV override.</p>
-                    <a href="#sl-05" class="btn btn-outline-info mt-3">Specs</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SL-06 Overwatch (omitted: not in your drone list, can add if needed) -->
-
-            <!-- SL-07 Phantom Vortex -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                    <div class="card-body p-4">
-                    <h4 class="mb-3 text-info">SL-07 “Phantom Vortex”</h4>
-                    <p>Record-class speed interceptor. Ultra-high KV motors, FPV or AI mode, full telemetry logging, and real-time thermal monitoring.</p>
-                    <a href="#sl-07" class="btn btn-outline-info mt-3">Specs</a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-        <!-- SL Series Drones with Modals -->
+    <!-- SL Series Drones with Modals -->
     <section id="sl-series" class="container py-5">
     <h2 class="text-center mb-5 section-title glow-blue">🚀 SL Series Titanium Drones</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -295,8 +219,135 @@
                 </div>
             </div>
 
-            <!-- Repeat the same structure for SL-03 Vulture, SL-04 Viper, SL-05 Raven, SL-07 Phantom Vortex -->
-            <!-- You can copy and adapt modal IDs, titles, and image file names accordingly -->
+            <!-- SL-03 Vulture -->
+            <div class="col">
+                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
+                    <div class="card-body p-4">
+                    <h4 class="mb-3 text-info">SL-03 “Vulture”</h4>
+                    <p>Heavy-duty UAV built for payload delivery and equipment deployment in hard-to-reach locations. Magnetic clamps & dual rotors included.</p>
+                    <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalVulture">Browse Images</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal Vulture -->
+            <div class="modal fade" id="modalVulture" tabindex="-1" aria-labelledby="modalVultureLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalVultureLabel">SL-03 Vulture</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Drones/SL03_Vulture_1.jpg" alt="Vulture Image 1" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL03_Vulture_2.jpg" alt="Vulture Image 2" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL03_Vulture_3.jpg" alt="Vulture Image 3" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SL-04 Viper -->
+            <div class="col">
+                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
+                    <div class="card-body p-4">
+                        <h4 class="mb-3 text-info">SL-04 “Viper”</h4>
+                        <p>Stealth operations drone with noise suppression and cloaking capabilities. Optimal for infiltration, signal tracing, and stealth delivery.</p>
+                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalViper">Browse Images</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal Viper -->
+            <div class="modal fade" id="modalViper" tabindex="-1" aria-labelledby="modalViperLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalViperLabel">SL-04 Viper</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Drones/SL04_Viper_1.jpg" alt="Viper Image 1" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL04_Viper_2.jpg" alt="Viper Image 2" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL04_Viper_3.jpg" alt="Viper Image 3" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SL-05 Raven -->
+            <div class="col">
+                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
+                    <div class="card-body p-4">
+                        <h4 class="mb-3 text-info">SL-05 “Raven”</h4>
+                        <p>Multi-terrain drone with both aerial and ground mobility. Designed for recon, relay missions, and low-altitude intelligence collection.</p>
+                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalRaven">Browse Images</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal Raven -->
+            <div class="modal fade" id="modalRaven" tabindex="-1" aria-labelledby="modalRavenLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalRavenLabel">SL-05 Raven</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Drones/SL05_Raven_1.jpg" alt="Raven Image 1" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL05_Raven_2.jpg" alt="Raven Image 2" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL05_Raven_3.jpg" alt="Raven Image 3" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SL-07 Phantom Vortex -->
+            <div class="col">
+                <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
+                    <div class="card-body p-4">
+                        <h4 class="mb-3 text-info">SL-07 “Phantom Vortex”</h4>
+                        <p>Experimental drone with magnetic levitation and zero-emission propulsion. Developed for high-speed, silent reconnaissance and disruption ops.</p>
+                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalPhantom">Browse Images</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal Phantom -->
+            <div class="modal fade" id="modalPhantom" tabindex="-1" aria-labelledby="modalPhantomLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalPhantomLabel">SL-07 Phantom Vortex</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Drones/SL07_Phantom_1.jpg" alt="Phantom Image 1" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL07_Phantom_2.jpg" alt="Phantom Image 2" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL07_Phantom_3.jpg" alt="Phantom Image 3" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
         </div>
     </section>
