--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,10 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
-                                    <li><a class="dropdown-item" href="drones.html">SL Series Drones</a></li>
+                                    <li><a class="dropdown-item" href="drones.html">Drones</a></li>
+                                    <li><a class="dropdown-item" href="architecture.html">Architecture</a></li>
+                                    <li><a class="dropdown-item" href="vehicles.html">Vehicles</a></li>
+                                    <li><a class="dropdown-item" href="armor.html">Body Armor</a></li>
                                     <li><a class="dropdown-item" href="customsolutions.html">Custom Solutions</a></li>
                                 </ul>
                             </li>
@@ -126,7 +129,7 @@
     </section>
 
     <!-- Hero Section -->
-    <section class="text-center py-5" id="contact-hero">
+    <section id="hero" class="text-center py-5">
         <div class="container">
             <img src="images/ContactUs_Logo_2500x500px.png" alt="Slabbion Logo" class="logo">
             <h1 class="display-5 fw-bold glow-gray">Slabbion is ready to deliver excellence.</h1>
@@ -400,7 +403,7 @@
             
             <!-- Submit -->
             <div class="text-center">
-            <button type="submit" class="btn btn-light mt-3 feature-box">Send My Request</button>
+            <button type="submit" class="btn btn-light mt-3 feature-box glow-gray">Send My Request</button>
             </div>
 
             <!-- Status message -->
