--- a/gamedevelopment.html
+++ b/gamedevelopment.html
@@ -104,7 +104,10 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
-                                    <li><a class="dropdown-item" href="drones.html">SL Series Drones</a></li>
+                                    <li><a class="dropdown-item" href="drones.html">Drones</a></li>
+                                    <li><a class="dropdown-item" href="architecture.html">Architecture</a></li>
+                                    <li><a class="dropdown-item" href="vehicles.html">Vehicles</a></li>
+                                    <li><a class="dropdown-item" href="armor.html">Body Armor</a></li>
                                     <li><a class="dropdown-item" href="customsolutions.html">Custom Solutions</a></li>
                                 </ul>
                             </li>
@@ -121,12 +124,12 @@
     </section>
 
     <!-- HellFull Hero Banner -->
-    <section id="hellfull-hero" class="text-center py-5">
+    <section id="hero" class="text-center py-5">
         <div class="container">
             <img src="images/GameDevelopment_Logo_2500x500px.png" alt="HellFull Logo" class="logo">
             <h1 class="display-4 glow-red">HELLFULL: The Last Hope</h1>
             <p>One Game. Five Dimensions. Endless Carnage.</p>
-            <a href="https://store.steampowered.com/app/1903130/HellFull__The_Last_Hope/" class="btn btn-light mt-3 feature-box">Play Now on Steam</a>
+            <a href="https://store.steampowered.com/app/1903130/HellFull__The_Last_Hope/" class="btn btn-light mt-3 feature-box glow-red">Play Now on Steam</a>
         </div>
     </section>
 
