--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -99,7 +99,10 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
-                                    <li><a class="dropdown-item" href="drones.html">SL Series Drones</a></li>
+                                    <li><a class="dropdown-item" href="drones.html">Drones</a></li>
+                                    <li><a class="dropdown-item" href="architecture.html">Architecture</a></li>
+                                    <li><a class="dropdown-item" href="vehicles.html">Vehicles</a></li>
+                                    <li><a class="dropdown-item" href="armor.html">Body Armor</a></li>
                                     <li><a class="dropdown-item" href="customsolutions.html">Custom Solutions</a></li>
                                 </ul>
                             </li>
@@ -123,7 +126,7 @@
             <p class="lead font-weight-bold">
             Elevate your brand with bold, high-impact visuals. From logos to full brand kits — Slabbion makes design unforgettable.
             </p>
-            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box">Level Up My Brand</a>
+            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-cyan">Level Up My Brand</a>
         </div>
     </section>
 
