--- a/socialmedia.html
+++ b/socialmedia.html
@@ -100,7 +100,10 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
-                                    <li><a class="dropdown-item" href="drones.html">SL Series Drones</a></li>
+                                    <li><a class="dropdown-item" href="drones.html">Drones</a></li>
+                                    <li><a class="dropdown-item" href="architecture.html">Architecture</a></li>
+                                    <li><a class="dropdown-item" href="vehicles.html">Vehicles</a></li>
+                                    <li><a class="dropdown-item" href="armor.html">Body Armor</a></li>
                                     <li><a class="dropdown-item" href="customsolutions.html">Custom Solutions</a></li>
                                 </ul>
                             </li>
@@ -122,7 +125,7 @@
             <img src="images/SocialMedia_Logo_2500x500px.png" alt="Slabbion Logo" class="logo">
             <h5 class="display-4 glow-green">Our Services</h1>
             <p class="lead font-weight-bold">Slabbion empowers you through tailored digital solutions — from modern web development to content-driven social media strategy and standout design.</p>
-            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box">Let’s Build Together</a>
+            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-green">Let’s Build Together</a>
         </div>
     </section>
 
