--- a/customsolutions.html
+++ b/customsolutions.html
@@ -97,7 +97,10 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
-                                    <li><a class="dropdown-item" href="drones.html">SL Series Drones</a></li>
+                                    <li><a class="dropdown-item" href="drones.html">Drones</a></li>
+                                    <li><a class="dropdown-item" href="architecture.html">Architecture</a></li>
+                                    <li><a class="dropdown-item" href="vehicles.html">Vehicles</a></li>
+                                    <li><a class="dropdown-item" href="armor.html">Body Armor</a></li>
                                     <li><a class="dropdown-item" href="customsolutions.html">Custom Solutions</a></li>
                                 </ul>
                             </li>
@@ -123,7 +126,7 @@
             </h1>
             <p class="lead font-weight-bold">Web development, social media management, and graphic design to elevate your brand.
             </p>
-            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box">Unlock Custom Solutions</a>
+            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-yellow">Unlock Custom Solutions</a>
             <div class="stars mt-4">
             ★★★★★
             </div>
