--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
-                                    <li><a class="dropdown-item" href="drones.html">SL Series Drones</a></li>
+                                    <li><a class="dropdown-item" href="drones.html">Drones</a></li>
+                                    <li><a class="dropdown-item" href="architecture.html">Architecture</a></li>
+                                    <li><a class="dropdown-item" href="vehicles.html">Vehicles</a></li>
+                                    <li><a class="dropdown-item" href="armor.html">Body Armor</a></li>
                                     <li><a class="dropdown-item" href="customsolutions.html">Custom Solutions</a></li>
                                 </ul>
                             </li>
@@ -119,7 +122,7 @@
             <img src="images/Slabbion_Logo_2500x500px.png" alt="Slabbion Logo" class="logo">
             <h5 class="display-4 glow-blue">Our Services</h1>
             <p class="lead font-weight-bold">Slabbion empowers you through tailored digital solutions — from modern web development to content-driven social media strategy and standout design.</p>
-            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box">Get Your Free Quote</a>
+            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-blue">Get Your Free Quote</a>
         </div>
     </section>
 
@@ -171,12 +174,43 @@
                 <!-- Drones -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-robot fa-3x mb-3 text-info"></i>
-                        <h4 class="mb-2">Drones (SL Series)</h4>
-                        <p>Explore Slabbion's titanium drone army: SL-01 to SL-07—each built for purpose, precision, and power.</p>
-                        <a href="drones.html#sl-series" class="btn btn-outline-info mt-3">View Models</a>
+                        <i class="fas fa-robot fa-3x mb-3" style="color: #6f42c1;"></i>
+                        <h4 class="mb-2">Drones</h4>
+                        <p>Explore Slabbion's titanium drone (SL Series) army: SL-01 to SL-07—each built for purpose, precision, and power.</p>
+                        <a href="drones.html#sl-series" class="btn btn-outline mt-3" style="color: #6f42c1; border-color: #6f42c1;">View Models</a>
                     </div>
                 </div>
+
+                <!-- Energy Efficient Homes -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
+                        <i class="fas fa-home fa-3x mb-3" style="color: #228B22;"></i>
+                        <h4 class="mb-2">Architecture</h4>
+                        <p>Energy Efficient Homes. Designing future-forward smart homes with solar integration, automation, and sustainable living at the core.</p>
+                        <a href="architecture.html#architecture" class="btn btn-outline mt-3" style="color: #228B22; border-color: #228B22;">Discover</a>
+                    </div>
+                </div>
+
+                <!-- Vehicles -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
+                        <i class="fas fa-car-side fa-3x mb-3" style="color: #e67e22;"></i>
+                        <h4 class="mb-2">Vehicles</h4>
+                        <p>Cars, Dune Buggies & Bikes. High-performance custom builds engineered for speed, control, and off-road adventure—Slabbion machines deliver on every terrain.</p>
+                        <a href="vehicles.html#vehicles" class="btn btn-outline mt-3" style="color: #e67e22; border-color: #e67e22;">View Builds</a>
+                    </div>
+                </div>
+
+                <!-- Body Armor -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
+                        <i class="fas fa-shield-alt fa-3x mb-3" style="color: #b30000;"></i>
+                        <h4 class="mb-2">Body Armor</h4>
+                        <p>Slabbion’s body armor blends tactical strength with future-ready materials—designed for resilience, mobility, and innovation in the field.</p>
+                        <a href="armor.html#body-armor" class="btn btn-outline mt-3" style="color: #b30000; border-color: #b30000;">Explore Gear</a>
+                    </div>
+                </div>
+
 
                 <!-- Custom Solutions -->
                 <div class="col-lg-3 col-md-6 mb-4">
