--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -100,7 +100,10 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
-                                    <li><a class="dropdown-item" href="drones.html">SL Series Drones</a></li>
+                                    <li><a class="dropdown-item" href="drones.html">Drones</a></li>
+                                    <li><a class="dropdown-item" href="architecture.html">Architecture</a></li>
+                                    <li><a class="dropdown-item" href="vehicles.html">Vehicles</a></li>
+                                    <li><a class="dropdown-item" href="armor.html">Body Armor</a></li>
                                     <li><a class="dropdown-item" href="customsolutions.html">Custom Solutions</a></li>
                                 </ul>
                             </li>
@@ -122,7 +125,7 @@
             <img src="images/WebDev_Logo_2500x500px.png" alt="Slabbion Logo" class="logo">
             <h1 class="display-4 glow-blue">Your vision deserves more! Let’s build something eternal.</h1>
             <p class="lead font-weight-bold">At Slabbion, we craft blazing-fast, secure, and visually striking websites with purpose, strategy, and divine excellence.</p>
-            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box">Bring My Vision to Life</a>
+            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-blue">Bring My Vision to Life</a>
         </div>
     </section>
 
